--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,6 +66,8 @@
         "format": "cpp",
         "charconv": "cpp",
         "cinttypes": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "bitset": "cpp",
+        "valarray": "cpp"
     }
 }
