--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -73,5 +73,16 @@
         "source_location": "cpp",
         "typeindex": "cpp",
         "stdfloat": "cpp"
-    }
+    },
+    "python.pythonPath": "/home/nicolas/dev/research/KGMT/venv/bin/python",
+    "python.analysis.extraPaths": [
+        "${workspaceFolder}/**",
+        "/usr/include/**",
+        "/usr/local/include/**",
+        "/home/nicolas/miniconda3/envs/cudf_dev/include",
+        "/home/nicolas/miniconda3/envs/cudf_dev/include/cudf",
+        "/home/nicolas/miniconda3/envs/cudf_dev/include/rmm",
+        "/home/nicolas/miniconda3/envs/cudf_dev/include/cugraph",
+        "/usr/include/eigen3"
+    ]
 }
