updaing ompl (parallel cpu) cleaning cmakelist

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ find_package(Boost REQUIRED)
 find_package(yaml-cpp REQUIRED)
 find_package(Python3 COMPONENTS Development NumPy REQUIRED)
 find_package(ompl REQUIRED)
+find_package(OpenMP REQUIRED)
 
 include_directories(
     include 
@@ -23,7 +24,6 @@ include_directories(
     ${OMPL_INCLUDE_DIRS}
 )
 
-# Add the source files for your project
 set(SOURCE_FILES
     src/planners/KGMT.cu
     src/planners/Planner.cu
@@ -34,16 +34,18 @@ set(SOURCE_FILES
     src/cpu/collisionCheck/CollisionCheck.cpp
     src/cpu/planners/OMPL_Planner.cpp
 )
-
-# Add a library target for your non-CUDA code
 add_library(KGMT_lib ${SOURCE_FILES})
 
-# Add your CUDA executable
+
+if (OpenMP_CXX_FOUND)
+    target_link_libraries(KGMT_lib PUBLIC OpenMP::OpenMP_CXX)
+endif()
+
+
+# -- GPU EXECUTABLES --
 add_executable(main examples/gpu/main.cu)
-
-# Link the library and other dependencies with the CUDA executable
 target_link_libraries(main
-    KGMT_lib
+    PUBLIC KGMT_lib
     ${CUDA_LIBRARIES}
     ${Boost_LIBRARIES}
     ${EIGEN3_LIBRARIES}
@@ -52,12 +54,9 @@ target_link_libraries(main
     Python3::NumPy
 )
 
-# Add your CUDA executable
 add_executable(benchMain examples/gpu/benchMain.cu)
-
-# Link the library and other dependencies with the CUDA executable
 target_link_libraries(benchMain
-    KGMT_lib
+    PUBLIC KGMT_lib
     ${CUDA_LIBRARIES}
     ${Boost_LIBRARIES}
     ${EIGEN3_LIBRARIES}
@@ -66,71 +65,82 @@ target_link_libraries(benchMain
     Python3::NumPy
 )
 
-add_executable(est_cpu examples/cpu/est_cpu.cpp)
-
-# Link the library and other dependencies with the CUDA executable
-target_link_libraries(est_cpu
-    KGMT_lib
-    ${Boost_LIBRARIES}
-    ${EIGEN3_LIBRARIES}
-    yaml-cpp
-    Python3::Python
-    Python3::NumPy
-    ${OMPL_LIBRARIES}
-)
-
-add_executable(rrt_cpu examples/cpu/rrt_cpu.cpp)
-
-# Link the library and other dependencies with the CUDA executable
-target_link_libraries(rrt_cpu
-    KGMT_lib
-    ${Boost_LIBRARIES}
-    ${EIGEN3_LIBRARIES}
-    yaml-cpp
-    Python3::Python
-    Python3::NumPy
-    ${OMPL_LIBRARIES}
-)
-
-add_executable(pdst_cpu examples/cpu/pdst_cpu.cpp)
-
-# Link the library and other dependencies with the CUDA executable
-target_link_libraries(pdst_cpu
-    KGMT_lib
-    ${Boost_LIBRARIES}
-    ${EIGEN3_LIBRARIES}
-    yaml-cpp
-    Python3::Python
-    Python3::NumPy
-    ${OMPL_LIBRARIES}
-)
-
-
-# Ensure CUDA separable compilation
 set_target_properties(KGMT_lib PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
 set_target_properties(main PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
 set_target_properties(benchMain PROPERTIES CUDA_SEPARABLE_COMPILATION ON)
 
-# Suppress specific CUDA warnings and enable detailed information
-set(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS} -diag-suppress=20012,20013,20014,20015 --expt-relaxed-constexpr --ptxas-options=-v")
+# -- CPU EXECUTABLES --
+add_executable(est_cpu examples/cpu/est_cpu.cpp)
+target_link_libraries(est_cpu
+    PUBLIC KGMT_lib
+    ${Boost_LIBRARIES}
+    ${EIGEN3_LIBRARIES}
+    yaml-cpp
+    Python3::Python
+    Python3::NumPy
+    ${OMPL_LIBRARIES}
+    OpenMP::OpenMP_CXX
+)
 
-# Set CUDA architectures
+add_executable(rrt_cpu examples/cpu/rrt_cpu.cpp)
+target_link_libraries(rrt_cpu
+    PUBLIC KGMT_lib
+    ${Boost_LIBRARIES}
+    ${EIGEN3_LIBRARIES}
+    yaml-cpp
+    Python3::Python
+    Python3::NumPy
+    ${OMPL_LIBRARIES}
+    OpenMP::OpenMP_CXX
+)
+
+add_executable(rrtParallel_cpu examples/cpu/rrtParallel_cpu.cpp)
+target_link_libraries(rrtParallel_cpu
+    PUBLIC KGMT_lib
+    ${Boost_LIBRARIES}
+    ${EIGEN3_LIBRARIES}
+    yaml-cpp
+    Python3::Python
+    Python3::NumPy
+    ${OMPL_LIBRARIES}
+    OpenMP::OpenMP_CXX
+)
+
+add_executable(omplParallelBench_cpu examples/cpu/omplParallelBench_cpu.cpp)
+target_link_libraries(omplParallelBench_cpu
+    PUBLIC KGMT_lib
+    ${Boost_LIBRARIES}
+    ${EIGEN3_LIBRARIES}
+    yaml-cpp
+    Python3::Python
+    Python3::NumPy
+    ${OMPL_LIBRARIES}
+    OpenMP::OpenMP_CXX
+)
+
+add_executable(pdst_cpu examples/cpu/pdst_cpu.cpp)
+target_link_libraries(pdst_cpu
+    PUBLIC KGMT_lib
+    ${Boost_LIBRARIES}
+    ${EIGEN3_LIBRARIES}
+    yaml-cpp
+    Python3::Python
+    Python3::NumPy
+    ${OMPL_LIBRARIES}
+    OpenMP::OpenMP_CXX
+)
+
+
+set(CUDA_NVCC_FLAGS "${CUDA_NVCC_FLAGS} -diag-suppress=20012,20013,20014,20015 --expt-relaxed-constexpr --ptxas-options=-v")
 set_property(TARGET main PROPERTY CUDA_ARCHITECTURES 86)
 set_property(TARGET benchMain PROPERTY CUDA_ARCHITECTURES 86)
 set_property(TARGET KGMT_lib PROPERTY CUDA_ARCHITECTURES 86)
-
-# Suppress all warnings from Eigen
 add_definitions(-DEIGEN_NO_DEBUG)
-
-# Additional configurations for suppressing warnings
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-deprecated-declarations -Wno-unused-function")
 endif()
-
 if(MSVC)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4996 /wd4244 /wd4267")
 endif()
-
-# Suppress warnings from CUDA headers
 add_definitions(-D_MWAITXINTRIN_H_INCLUDED)
 add_definitions(-D_FORCE_INLINES)
