--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -77,7 +77,9 @@
         "forward_list": "cpp",
         "list": "cpp",
         "unordered_set": "cpp",
-        "shared_mutex": "cpp"
+        "shared_mutex": "cpp",
+        "__nullptr": "cpp",
+        "filesystem": "cpp"
     },
     "python.pythonPath": "/home/nicolas/dev/research/KGMT/venv/bin/python",
     "python.analysis.extraPaths": [
