update ompl to include nonlinear quad. update ompl decomp to usethe same as KGMT

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,7 @@ set(SOURCE_FILES
     src/cpu/planners/ModRRT.cpp;
     src/cpu/planners/ModPDST.cpp;
     src/cpu/planners/ModEST.cpp;
+    src/cpu/planners/ModSyclop.cpp;
 )
 add_library(KGMT_lib ${SOURCE_FILES})
 
